--- a/index.html
+++ b/index.html
@@ -1,7 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
+
+<!--Metadata-->
+<meta name="description" content="personal programmming blog">
+<meta name="keywords" content="HTML, CSS, JavaScript, C">
+<meta name="author" content="Keenen Cates">
+<meta charset="UTF-8">
+
+<!--CSS-->
+<style>
+
+#menu li {
+    display:inline;
+}
+
+#header {
+  background-color:green;
+  color:black;
+  text-align:center;
+  width:100%;
+  height:10%;
+}
+
+#navigation {
+  background-color:gray;
+  color:black;
+  float:;
+  width:100%;
+  height:10%;
+}
+
+</style>
+
+<!--Body-->
 <body>
-<h1>Hello World</h1>
-<p>GitHub hosted</p>
+
+<div id="header">
+<h1>Cates Programming Blog</h1>
+</div>
+
+<div id="navigation">
+<ul id="menu">
+
+<li>Home</li>
+<li>Programming</li>
+
+</ul>
+</div>
+  
 </body>
 </html>
