--- a/index.html
+++ b/index.html
@@ -9,25 +9,48 @@
 
 <!--CSS-->
 <style>
+ul {
+  list-style-type:none;
+  margin: 0;
+  padding: 0;
+}
 
-#menu li {
+li {
     display:inline;
+	padding:;
 }
 
 #header {
   background-color:green;
   color:black;
   text-align:center;
-  width:100%;
-  height:10%;
+  width:100%px;
+  height:100px;
+  padding:0px
 }
 
-#navigation {
+#nav {
   background-color:gray;
   color:black;
-  float:;
   width:100%;
-  height:10%;
+  height:25px;
+  padding:0px;
+  
+}
+
+#section {
+  color:black;
+  text-align:;
+  width:100%;
+  height:600px;
+
+}
+
+#footer {
+  color:black;
+  text-align:center;
+  padding:300px;
+  background-color:black;
 }
 
 </style>
@@ -36,16 +59,24 @@
 <body>
 
 <div id="header">
-<h1>Cates Programming Blog</h1>
+<h1 style="text-align:left">Cates Programming Blog</h1>
 </div>
 
-<div id="navigation">
+<div id="nav">
 <ul id="menu">
 
-<li>Home</li>
-<li>Programming</li>
+<li><a href="http:\\keenencates.github.io/index.html">Home</a></li>
+<li><a href="http:\\keenencates.github.io/programs.html">Programming</a></li>
 
 </ul>
+</div>
+
+<div id="section">
+Hi, my name is Keenen. I make programs!
+</div>
+
+<div id="footer">
+
 </div>
   
 </body>
