Added files via upload

--- a/index.html
+++ b/index.html
@@ -1,83 +1,51 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
 <!--Metadata-->
+<head>
 <meta name="description" content="personal programmming blog">
 <meta name="keywords" content="HTML, CSS, JavaScript, C">
 <meta name="author" content="Keenen Cates">
 <meta charset="UTF-8">
+<link rel="stylesheet" href="assets/stylesheets/home.css">
+</head>
 
-<!--CSS-->
-<style>
-ul {
-  list-style-type:none;
-  margin: 0;
-  padding: 0;
-}
+<html>
 
-li {
-    display:inline;
-	padding:;
-}
+<header class = "container group">
+<h1 class="logo">
+<strong>Cates Programming Blog</strong>
+</h1>
+</header>
 
-#header {
-  background-color:green;
-  color:black;
-  text-align:center;
-  width:100%px;
-  height:100px;
-  padding:0px
-}
-
-#nav {
-  background-color:gray;
-  color:black;
-  width:100%;
-  height:25px;
-  padding:0px;
-  
-}
-
-#section {
-  color:black;
-  text-align:;
-  width:100%;
-  height:600px;
-
-}
-
-#footer {
-  color:black;
-  text-align:center;
-  padding:300px;
-  background-color:black;
-}
-
-</style>
-
-<!--Body-->
 <body>
+<section class="row">
+<div class="grid"><!-- 
+Sections 
+--><section class="col-1-2">
+<h2><strong>About Me</strong></h2>
+<p>Hi, my name is Keenen! I do programming stuff. This is my first website and a learning experience for me.</p>
+<p>I have experiences using programming languages such as C/C++, Java, and Python.</p>
+<p>I attend the University of Evansville and I'm currently a computer science and mathermatics major.</p>
+<p>Feel free to contact me at kc235@evansville.edu</p>
+</section><!--
+Programs
+--><section class="col-1-2">
+<h3><strong>My Programming Projects</strong></h3>
 
-<div id="header">
-<h1 style="text-align:left">Cates Programming Blog</h1>
-</div>
-
-<div id="nav">
-<ul id="menu">
-
-<li><a href="http:\\keenencates.github.io/index.html">Home</a></li>
-<li><a href="http:\\keenencates.github.io/programs.html">Programming</a></li>
-
+<div class = "scroll">
+<ul style = "list-style-type:none">
+	<li><a href="assets/programs/boardgame.zip"download>Board Games(Checkers and Hex)</a> - March/April 2016 - Project for CS290 using Java 8. Project was to make a console representation of the game checkers and hex.</li>
 </ul>
 </div>
 
-<div id="section">
-Hi, my name is Keenen. I make programs!
-</div>
-
-<div id="footer">
-
-</div>
-  
+</section><!--
+end
+--></div>
+</section>
 </body>
+
+<footer class="primary-footer container group">
+Cates Programming
+</footer>
+
 </html>
