Added files via upload

--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@ Sections
 --><section class="col-1-2">
 <h2><strong>About Me</strong></h2>
 <p>Hi, my name is Keenen! I do programming stuff. This is my first website and a learning experience for me.</p>
-<p>I have experiences using programming languages such as C/C++, Java, and Python.</p>
-<p>I attend the University of Evansville and I'm currently a computer science and mathermatics major.</p>
+<p>I have used programming languages such as C/C++, Java, and Python.</p>
+<p>I attend the University of Evansville and I'm currently a computer science/mathermatics double major.</p>
 <p>Feel free to contact me at kc235@evansville.edu</p>
 </section><!--
 Programs
 --><section class="col-1-2">
-<h3><strong>My Programming Projects</strong></h3>
+<h3><strong>My Projects</strong></h3>
 
 <div class = "scroll">
 <ul style = "list-style-type:none">
 	<li><a href="assets/programs/boardgame.zip"download>Board Games(Checkers and Hex)</a> - March/April 2016 - Project for CS290 using Java 8. Project was to make a console representation of the game checkers and hex.</li>
+	<li><a href="benji.html">Benji - Sun Kil Moon - Review</a> - April 2016 - Project in creative writing to write an endearing/contemptible/etc review for music of our choice</li>
 </ul>
 </div>
 
