Added files via upload

--- a/benji.html
+++ b/benji.html
@@ -18,7 +18,7 @@
 </header>
 
 <body>
-<section class="row">
+<section class="row-alt">
 <div class="grid">
 <section class ="col-1-5">
 <strong><u>Contributors</u></strong>
@@ -28,12 +28,12 @@
 <p><iframe src="https://embed.spotify.com/?uri=spotify%3Atrack%3A2mRXHfoFx5EfcwSRtctFjO" width="300" height="80" frameborder="0" allowtransparency="true"></iframe></p>
 <p><iframe width="300" height="150" src="https://www.youtube.com/embed/QvNAHBI1V4o" frameborder="0" allowfullscreen></iframe>
 </section><!--
---><section class="col-3-5">
+--><section class="col-1-5">
 <p><strong><u>Benji</u></strong></p>
 <p><img src="assets/pictures/benji.jpg" alt="Benji Album Cover" style="width:319px;height:319px;"></p>
 <p>Sun Kil Moon - (2014)</p>
 
-<p>Benji. This album isn't the lovable mixed breed dog from the 1974 film "Benji." 
+<p style="text-align:left">Benji. This album isn't the lovable mixed breed dog from the 1974 film "Benji." 
 No, this album is something devastating. Mark Kozelek gives the listeners a catalog of intimate, tragic experiences. 
 For example, the track “Jim Wise” is about a man who mercy killed his wife in a hospital, and failed to commit suicide after doing so. 
 Not only is this track cathartic, it offers no answers. 
@@ -42,7 +42,7 @@ That’s what makes this album so effective -- Kozelek is able to tell devastati
 Which is multiplied the simplicity and humanity of it. There’s no answer to the infinite tragedies, and what’s left is that heaviness. 
 Not crying, not sadness -- a deep sense of misfortune in the bones of humanity.</p>
 
-<p>What’s truly remarkable about Kozelek is his ability to make all of these stories feel intimate. 
+<p style="text-align:left">What’s truly remarkable about Kozelek is his ability to make all of these stories feel intimate. 
 All of the tracks on Benji feel real. 
 Much of the album is interlaced with historical facts that can be found on a variety of places on the internet. 
 For example, the song about Jim Wise is a true story about a man who killed his wife in a hospital after she had an aneurysm, and he couldn’t bare seeing her in pain. 
@@ -55,7 +55,7 @@ People simply can’t make that kinda thing up either -- out of the many absurdi
 Even more impressive, the album doesn’t feel like a gimmick. Many albums try to deal with mortality in a reductive, overly esoteric fashion. 
 Yet even on topical tracks such as, “Pray for Newtown” the lyrics are heartfelt.</p> 
 
-<p>Overall, the tracks on “Benji” are complex and merit multiple listens. 
+<p style="text-align:left">Overall, the tracks on “Benji” are complex and merit multiple listens. 
 Even after exhaustive listening, there are still layers of depth to unfold and one listen isn’t quite like another. 
 Kozelek manages to grasp at true wisdom through earnesty and simplicity. Even in the tragic landscape of the album, it invokes the sublimity of life. 
 No matter how depressing or absurd life can be, there is still a sense of beauty.</p>
