Added files via upload

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ Sections
 <p>I have used programming languages such as C/C++, Java, and Python.</p>
 <p>I attend the University of Evansville and I'm currently a computer science/mathermatics double major.</p>
 <p>Feel free to contact me at kc235@evansville.edu</p>
+<a href="assets/programs/Resume.docx"download>My Resume</a>
 </section><!--
 Programs
 --><section class="col-1-2">
@@ -34,8 +35,8 @@ Programs
 
 <div class = "scroll">
 <ul style = "list-style-type:none">
-	<li><a href="assets/programs/boardgame.zip"download>Board Games(Checkers and Hex)</a> - March/April 2016 - Project for CS290 using Java 8. Project was to make a console representation of the game checkers and hex.</li>
-	<li><a href="benji.html">Benji - Sun Kil Moon - Review</a> - April 2016 - Project in creative writing to write an endearing/contemptible/etc review for music of our choice</li>
+	<li><a href="assets/programs/BoardGames.zip"download>Board Games(Checkers, Hex, Chess, and GUI Chess)</a> - March/April 2016 - Project for CS290 using Java 8. Project was to make a console representation of the game checkers, hex, and a gui representation of Chess.</li>
+	<!--<li><a href="benji.html">Benji - Sun Kil Moon - Review</a> - April 2016 - Project in creative writing to write an endearing/contemptible/etc review for music of our choice</li>-->
 </ul>
 </div>
 
