--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Sections
 <p>I have used programming languages such as C/C++, Java, and Python.</p>
 <p>I attend the University of Evansville and I'm currently a computer science/mathermatics double major.</p>
 <p>Feel free to contact me at kc235@evansville.edu</p>
-<a href="assets/programs/Resume.docx"download>My Resume</a>
+<a href="assets/programs/resume.docx"download>My Resume</a>
 </section><!--
 Programs
 --><section class="col-1-2">
@@ -35,7 +35,7 @@ Programs
 
 <div class = "scroll">
 <ul style = "list-style-type:none">
-	<li><a href="assets/programs/BoardGames.zip"download>Board Games(Checkers, Hex, Chess, and GUI Chess)</a> - March/April 2016 - Project for CS290 using Java 8. Project was to make a console representation of the game checkers, hex, and a gui representation of Chess.</li>
+	<li><a href="assets/programs/boardgames.zip"download>Board Games(Checkers, Hex, Chess, and GUI Chess)</a> - March/April 2016 - Project for CS290 using Java 8. Project was to make a console representation of the game checkers, hex, and a gui representation of Chess.</li>
 	<!--<li><a href="benji.html">Benji - Sun Kil Moon - Review</a> - April 2016 - Project in creative writing to write an endearing/contemptible/etc review for music of our choice</li>-->
 </ul>
 </div>
