--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ Programs
 
 <div class = "scroll">
 <ul style = "list-style-type:none">
+	<li><a href="assets/programs/Perlin Noise 2.0.zip"download>Perlin Noise</a> - Solo project, this program generates a noise map in .ppm format.</li>
 	<li><a href="assets/programs/boardgames.zip"download>Board Games(Checkers, Hex, Chess, and GUI Chess)</a> - March/April 2016 - Project for CS290 using Java 8. Project was to make a console representation of the game checkers, hex, and a gui representation of Chess.</li>
 	<!--<li><a href="benji.html">Benji - Sun Kil Moon - Review</a> - April 2016 - Project in creative writing to write an endearing/contemptible/etc review for music of our choice</li>-->
 	<li><a href="assets/programs/textadventure.zip"download>Text Adventure</a> - Feb 2016 - Project for CS290 using Java 8. Project was to make a text adventure.</li>
