--- a/index.html
+++ b/index.html
@@ -11,56 +11,28 @@
 
 <html>
 
-<header class = "container group">
+<header>
 <h1 class="logo">
 <strong>Cates Programming Blog</strong>
 </h1>
 </header>
 
 <body>
-<section class="row">
-<div class="grid"><!-- 
-Sections 
---><section class="col-1-2">
+<div class = "card">
 <h2><strong>About Me</strong></h2>
-<p>Hi, my name is Keenen! I do programming stuff. This is my first website and a learning experience for me.</p>
-<p>I have used programming languages such as C/C++, Java, and Python.</p>
-<p>I attend the University of Evansville and I'm currently a computer science/mathermatics double major.</p>
-<p>Feel free to contact me at kc235@evansville.edu</p>
+<p>Hi, my name is Keenen! I do programming stuff. This is my first website and a learning experience for me.
+I have used programming languages such as C/C++, Java, and Python.
+I attend the University of Evansville and I'm currently a computer science/mathermatics double major.
+Feel free to contact me at kc235@evansville.edu</p>
 <a href="assets/programs/resume.pdf"download>My Resume</a>
-</section><!--
-Programs
---><section class="col-1-2">
-<h3><strong>My Projects</strong></h3>
-
-<div class = "scroll">
-<ul style = "list-style-type:none">
-	<li><a href="assets/programs/Perlin Noise 2.0.zip"download>Perlin Noise</a> - Solo project, this program generates a noise map in .ppm format.</li>
-	<li><a href="assets/programs/boardgames.zip"download>Board Games(Checkers, Hex, Chess, and GUI Chess)</a> - March/April 2016 - Project for CS290 using Java 8. Project was to make a console representation of the game checkers, hex, and a gui representation of Chess.</li>
-	<!--<li><a href="benji.html">Benji - Sun Kil Moon - Review</a> - April 2016 - Project in creative writing to write an endearing/contemptible/etc review for music of our choice</li>-->
-	<li><a href="assets/programs/textadventure.zip"download>Text Adventure</a> - Feb 2016 - Project for CS290 using Java 8. Project was to make a text adventure.</li>
-	<li><a href="assets/programs/date.zip"download>Date</a> - Fall 2015 - Project for CS215 using C++. Project was to implement a date class.</li>
-	<li><a href="assets/programs/minesweeper.zip"download>Minesweeper</a> - Fall 2015 - Project for CS215 using C++. Project was to make a minesweeper game.</li>
-	<li><a href="assets/programs/polynomial.zip"download>Polynomial</a> - Fall 2015 - Project for CS215 using C++. Project was to implement polynomial class with vectors.</li>
-	<li><a href="assets/programs/polynomial2.zip"download>Polynomial2</a> - Fall 2015 - Project for CS215 using C++. Project was to implement polynomial class with linked lists.</li>
-	<li><a href="assets/programs/sorting.zip"download>Sorting</a> - Fall 2015 - Project for CS215 using C++. Project was to implement a variety of sorting algorithims and analyze their runtimes with graphs and big On notation.</li>
-	<li><a href="assets/programs/treap.zip"download>Treap</a> - Fall 2015 - Project for CS215 using C++. Project was to implement treap data structure. A treap is a binary tree + a heap.</li>
-	<li><a href="assets/programs/Linear Algebra Animation Project.zip"download>Linear Algebra Animation Project</a> - Spring 2015 - Project for Linear Algebra using Matlab. Project was to apply linear algebra to a real world application. I made a variety of basic animations using L.A.</li>
-	<li><a href="assets/programs/blackjack.zip"download>Blackjack</a> - Spring 2015 - Project for CS210 using C. Project was to make blackjack game.</li>
-	<li><a href="assets/programs/gameofnim.zip"download>Game of Nim</a> - Spring 2015 - Project for CS210 using C. Project was to make game of nim.</li>
-	<li><a href="assets/programs/rockpapersisscors.zip"download>Rock, Paper, Scissors</a> - Spring 2015 - Project for CS210 using C. Project was to make R.P.S. game.</li>
-	<li><a href="assets/programs/sunrisesunsetclock.zip"download>Sunrise Sunset Clock</a> - Spring 2015 - Project for CS210 using C. Project was to make a program that could calculate time of sunrise and sunset.</li>
-	<li><a href="assets/programs/reverseguessinggame.zip"download>Reverse Guessing Game</a> - Spring 2015 - Project for CS210 using C. Project was to make a game where the computer would guess the number.</li>
-	<li><a href="assets/programs/ppmrotator.zip"download>.PPM Rotator</a> - Spring 2015 - Project for CS210 using C. Project was to make a program that could rotate a ppm image.</li>
-	<li><a href="assets/programs/statisticalanalysis.zip"download>Statistical Analysis</a> - Fall 2014 - Project for ENG101 using python. Project was to make a script the could perform statistical analysis on a set of data.</li>
-	<li><a href="assets/programs/pythoncalculator.zip"download>Python Calculator</a> - Fall 2014 - Project for ENG101 using python. Project was to make a basic calculator.</li>
-</ul>
 </div>
 
-</section><!--
-end
---></div>
-</section>
+<div class = "card">
+<h3><strong>My Projects</strong></h3>
+<div class="github-widget" data-username="Keenencates"></div>
+<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
+</div>
+
 </body>
 
 <footer class="primary-footer container group">
