Added card design.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
 
 <html>
 
-<header>
-<h1 class="logo">
-<strong>Cates Programming Blog</strong>
-</h1>
-</header>
-
 <body>
 <div class = "card">
 <h2><strong>About Me</strong></h2>
@@ -29,14 +23,9 @@ Feel free to contact me at kc235@evansville.edu</p>
 
 <div class = "card">
 <h3><strong>My Projects</strong></h3>
-<div class="github-widget" data-username="Keenencates"></div>
+<div class="github-widget" data-username="Keenencates", style = "margin:auto"></div>
 <script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
 </div>
-
 </body>
-
-<footer class="primary-footer container group">
-Cates Programming
-</footer>
 
 </html>
