--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="keywords" content="HTML, CSS, JavaScript, C">
 <meta name="author" content="Keenen Cates">
 <meta charset="UTF-8">
+<meta name=viewport content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="assets/stylesheets/home.css">
 </head>
 
