Updated style sheets.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,71 @@
 <meta name="author" content="Keenen Cates">
 <meta charset="UTF-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="assets/stylesheets/home.css">
+
+
+<style>
+.logo {
+	border-top: 4px solid #3A90DB;
+	padding: 40px 0 22px 0;
+	font-size: 48px;
+	line-height: 44px;
+	text-align: center;
+	margin-left: auto;
+	margin-right:auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+h1, h2{
+}
+h1 {
+  font-size: 36px;
+  color: #fff;
+  max-width: 50%;
+  text-align: center;
+}
+h2 {
+  font-size: 24px;
+}
+
+body {
+	font: 300 16px/22px "Helvetica Neue", Helvetica, Arial, sans-serif;
+	background: #233141;
+	margin: auto;
+	display:block;
+	text-align: center;
+	padding: 30px;
+
+}
+strong {
+  font-weight: 600;
+}
+cite, em {
+  font-style: italic;
+}
+
+.card{
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+	border-radius: 5px; /* 5px rounded corners */
+	
+	background: #ffffff; /* Old browsers */
+	
+	min-width: 80%;
+	max-width: 80%;
+	padding: 10px;
+	margin:10px;
+	
+	display: inline-block;
+	
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	vertical-align: top;
+}
+</style>
+
 </head>
 
 <html>
@@ -23,7 +87,7 @@ Feel free to contact me at kc235@evansville.edu</p>
 </div>
 
 <div class = "card">
-<h3><strong>My Projects</strong></h3>
+<h2><strong>My Projects</strong></h2>
 <div class="github-widget" data-username="Keenencates", style = "margin:auto"></div>
 <script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
 </div>
