--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Feel free to contact me at kc235@evansville.edu</p>
 <div class = "card">
 <h2><strong>My Projects</strong></h2>
 <div class="github-widget" data-username="Keenencates", style = "margin:auto"></div>
-<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
+<script async src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
 </div>
 </body>
 
