added link to fonts

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta charset="UTF-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
 
-
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700">
 <style>
 .logo {
 	border-top: 4px solid #3A90DB;
