--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@ h2 {
 }
 
 body {
-	font: 300 16px/22px "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font: 300 16px/22px;
 	background: #233141;
 	margin: auto;
 	display:block;
