--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta charset="UTF-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
 
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700">
 <style>
 .logo {
 	border-top: 4px solid #3A90DB;
@@ -33,7 +34,7 @@ h2 {
 }
 
 body {
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	/* font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;*/
 	font: 300 16px/22px;
 	background: #233141;
 	margin: auto;
