added sans seriff fonts

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@ h2 {
 }
 
 body {
-	/* font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;*/
-	font: 300 16px/22px;
+	font: 300 16px/22px sans-serif;
 	background: #233141;
 	margin: auto;
 	display:block;
