--- a/index.html
+++ b/index.html
@@ -8,15 +8,6 @@
 <meta charset="UTF-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
 
-<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
-<script>
-  WebFont.load({
-    google: {
-      families: ['Noto Sans']
-    }
-  });
-</script>
-
 <style>
 .logo {
 	border-top: 4px solid #3A90DB;
@@ -42,7 +33,7 @@ h2 {
 }
 
 body {
-	font: 300 16px/22px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, sans-serif;
+	font: 300 16px/22px Helvetica, sans-serif;
 	background: #233141;
 	margin: auto;
 	display:block;
