--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ cite, em {
 I have used programming languages such as C/C++, Java, and Python.
 I attend the University of Evansville and I'm currently a computer science/mathermatics double major.
 Feel free to contact me at kc235@evansville.edu or (812) 459-5449</p>
-<a href="assets/resume.pdf"download>My Resume</a>
+<a href="assets/resume.pdf">My Resume</a>
 </div>
 
 <div class = "card">
