Made major overhauls to page design

--- a/index.html
+++ b/index.html
@@ -7,74 +7,7 @@
 <meta name="author" content="Keenen Cates">
 <meta charset="UTF-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
-
-<style>
-.logo {
-	border-top: 4px solid #3A90DB;
-	padding: 40px 0 22px 0;
-	font-size: 48px;
-	line-height: 44px;
-	text-align: center;
-	margin-left: auto;
-	margin-right:auto;
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-h1, h2{
-}
-h1 {
-  font-size: 36px;
-  color: #fff;
-  max-width: 50%;
-  text-align: center;
-}
-h2 {
-  font-size: 24px;
-}
-h3{
-  font-size: 16px;
-}
-
-body {
-	font: 300 16px/22px Helvetica, sans-serif;
-	background: #233141;
-	margin: auto;
-	display:block;
-	text-align: center;
-	padding: 30px;
-
-}
-strong {
-  font-weight: 600;
-}
-cite, em {
-  font-style: italic;
-}
-
-.card{
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-	border-radius: 5px; /* 5px rounded corners */
-	
-	background: #ffffff; /* Old browsers */
-	
-	width: 350px;
-	min-height: 250px;
-	
-	padding-: 10px;
-	margin:10px;
-	
-	display: inline-block;
-	
-	margin-left: 10px;
-	margin-right: 10px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	vertical-align: top;
-}
-</style>
-
+<link rel="stylesheet" href="assets/stylesheets/index.css">
 </head>
 
 <html>
@@ -86,11 +19,12 @@ cite, em {
 <div class="github-widget" data-username="Keenencates", style = "margin-bottom:30px"></div>
 <script async src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
 </div>
-</body>
 
-<a class = "card" href="hutter.html" style="text-decoration: none !important; color:inherit;">
+<a class = "card" href="hutter.php" style="text-decoration: none !important; color:inherit;">
 <h2><strong>Hutter Prize Project</strong></h2>
 <h3>Sponsor/Advisor: Dr. Robert Morse</h3>
+<p>Click for more details</p>
 </a>
 
+</body>
 </html>
