--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="author" content="Keenen Cates">
 <meta charset="UTF-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
+<meta http-equiv="refresh" content="0; URL='https://csserver.evansville.edu/~kc235/index.html'" />
 <link rel="stylesheet" href="assets/stylesheets/index.css">
 </head>
 
