--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 <script async src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
 </div>
 
+<a class = "card" href="assets/resume.pdf" style="text-decoration: none !important; color:inherit;">
+<h2><strong>My Resume</strong></h2>
+<p>Click to view!</p>
+</a>
+
 <a class = "card" href="hutter.php" style="text-decoration: none !important; color:inherit;">
 <h2><strong>Hutter Prize Project</strong></h2>
 <h3>Sponsor/Advisor: Dr. Robert Morse</h3>
